src/test/resources/semantic/declarations/error/TC_ERROR_STRUCT_SIN_IMPL.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 8 | Struct A debe implementarse. Falta impl. |

struct A{

}
start{

}